--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -49,5 +49,18 @@ hr {
 
 /* Footer */
 .site-footer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   border-top: 1px solid #2a2f3a;
 }
+
+.footer-col-wrapper {
+  display: block;
+}
+
+.footer-col {
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
